fixed LI paragraph spacing

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,11 @@ h4 {
     
 }
 
+.facility li p {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .count{
     font-size: 25px;
     display:none;
